--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,10 @@
-arm_semihosting.pcm: arm_semihosting.ccm
+%.pcm: %.ccm
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) --precompile -o $@ $<
 
-check_DATA = arm_semihosting.pcm
+check_DATA = arm_semihosting.pcm \
+			 bit_field.pcm \
+			 jtag.pcm
+
+all: $(check_DATA)
+
 CLEANFILES = $(check_DATA)
