--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
 AC_INIT([ara], [0.0.1])
 AC_CONFIG_AUX_DIR([aux])
-AM_INIT_AUTOMAKE([-Wall foreign])
+AM_INIT_AUTOMAKE([-Wall foreign subdir-objects])
 
 PKG_PROG_PKG_CONFIG
 PKG_CHECK_EXISTS([gtest
@@ -13,6 +13,7 @@ AC_CONFIG_FILES([Makefile
                  src/Makefile
                  test/Makefile
                  test/unit/Makefile
+                 test/e2e/Makefile
                  ])
 CXXFLAGS+=" -std=c++23"
 AC_OUTPUT
